# moose

common/: Cargo.toml
common/src/: lib.rs  rb_tree.rs  statistics.rs
fs/: Cargo.toml
fs/src/: lib.rs
fs/src/fat32/: directory.rs  fat.rs  file.rs  mod.rs
fs/tools/: hash_test1_files.sh
kernel/: Cargo.toml  build.rs  limine.conf  package.ps1  run.ps1  x86_64-moose.json
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  cpu.rs  font.rs  kernel.rs  linker.rs  logger.rs  main.rs  memory.rs  panic.rs  process.rs  scheduler.rs  serial.rs  terminal.rs  vga.rs
kernel/src/arch/: irq.rs
kernel/src/arch/x86/: asm.rs  cpu.rs  gdt.rs  idt.rs  mod.rs
kernel/src/driver/: ata.rs  mod.rs  pci.rs  pic.rs  pit.rs  serial.rs  vga.rs
kernel/src/driver/acpi/: acpica.rs  devices.rs  hid.rs  madt.rs  mod.rs
kernel/src/driver/apic/: io_apic.rs  local_apic.rs  mod.rs
kernel/src/driver/clock/: hpet.rs  hyperv.rs  kvmclock.rs  mod.rs  pit.rs
kernel/src/driver/hv/: guid.rs  mod.rs
kernel/src/driver/hv/hyperv/: channel.rs  hypercall.asm  hypercall.rs  mod.rs  ring_buffer.rs
kernel/src/driver/hv/hyperv/synthetic_device/: disk.rs  gpu.rs  keyboard.rs  mod.rs  mouse.rs  nic.rs
kernel/src/driver/hv/hyperv/synthetic_device/integration/: file_copy.rs  heartbeat.rs  kvp.rs  mod.rs  shutdown.rs  socket.rs  time_sync.rs
kernel/src/driver/io/: device_manager.rs  device_tree.rs  mod.rs
kernel/src/driver/net/: mod.rs
kernel/src/driver/net/nic/: rtl8139.rs
kernel/src/subsystem/: allocator.rs  linker.rs  logger.rs  memory.rs  mod.rs  process.rs  scheduler.rs  syscall.rs  terminal.rs
kernel/src/subsystem/boot/: limine.rs  mod.rs
kernel/src/subsystem/clock/: mod.rs  system_clock.rs  time.rs  timer.rs
program1/src/: main.rs
program2/: x86_64-moose.json
program2/.cargo/: config.toml
program2/src/: main.rs
