[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }

log = "0.4.27"
snafu = { version = "0.8.5", default-features = false, features = ["rust_1_81"] }

bitfield-struct = "0.10.1"
bitflags = "2.9.0"

spin = "0.10.0"

phf = { version = "0.11.3", default-features = false, features = ["macros"] }

deku = { version = "0.16.0", default-features = false, features = ["alloc", "const_generics"] }
goblin = { version = "0.9.3", default-features = false, features = ["alloc", "elf32", "elf64", "endian_fd"] }

libm = { version = "0.2.11", default-features = false }

x86_64 = "0.15.2"
raw-cpuid = "11.5.0"

linked_list_allocator = "0.10.5"

pic8259 = { version = "0.11.0", default-features = false }

limine = { version = "0.4.0", default-features = false }

acpica-rs = { git = "https://github.com/moose-os/acpica-rs" }
hashbrown = "0.15.2"

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
debug = true
panic = "abort"

[profile.dev.package."*"]
opt-level = 3
